--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .content {
-    margin-top: 500px; /* Space for scrolling */
+    margin-top: 1000px; /* Space for scrolling */
 
 }
 
@@ -84,7 +84,7 @@ h1.fade-in.visible, h1.fade-in-right.visible, .paragraph p.visible{
 .nav-links a {
     text-decoration: none;
     color: #676e9c;
-    font-size: 25px;
+    font-size: 20px;
     padding: 10px 15px;
 
 }
@@ -217,8 +217,8 @@ ul{
 }
 
 .nav-links a:hover {
-    color: #f3b242;
-    background-color: rgba(197, 185, 76, 0.267);
+    color: #8f42f3;
+    background-color: rgba(133, 76, 197, 0.267);
     box-shadow: none;
     border-radius: 25%;
 }
@@ -232,4 +232,35 @@ h2{
     margin-top: 0px;
     color: #676e9c;
     opacity: 25%;
+}
+
+.card {
+    width: 40%;
+    background-color: #676e9c;
+    border-radius: 15px;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+    transition: transform 2s ease, box-shadow 0.3s ease; 
+}
+
+.card:hover {
+    transform: translate(-50%, -50%) scale(1.1);
+    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.3); 
+}
+
+.video-container {
+    width: 100%;
+    margin: 20px 0;
+}
+
+.video-container video {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
