--- a/style.css
+++ b/style.css
@@ -438,6 +438,7 @@ h2{
 
 h3{
     font-size: 2.5rem;
+    text-align: center;
     margin-bottom: 25px;
     color: #f9f9f6;
     font-weight: 700;
@@ -499,3 +500,4 @@ h3{
 .card-item:hover h3 {
     opacity: 1;
 }
+
